--- a/.github/workflows/build-pcsx-rearmed.yml
+++ b/.github/workflows/build-pcsx-rearmed.yml
@@ -1,124 +1,58 @@
 name: Build MIPS32 Little-Endian Core
 
+# 触发条件：推送到主分支/特定分支、或PR指向这些分支时触发
 on:
   push:
-    branches: [ main, master ]
-    tags: [ '*' ]
+    branches: [ main, master, dev ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, dev ]
 
+# 运行环境和作业定义
 jobs:
   build-mips32el:
     runs-on: ubuntu-latest
     steps:
-      # 1. 拉取仓库源码 + 强制更新所有嵌套子模块（关键修复）
-      - name: Checkout Code
+      # 步骤1：检出代码（包含子模块，因为pcsx_rearmed有很多deps子模块）
+      - name: Checkout source code
         uses: actions/checkout@v4
         with:
-          submodules: true  # 先拉取一级子模块
-          fetch-depth: 0    # 确保子模块能拉取完整历史
+          submodules: recursive  # 拉取所有子模块（deps/libchdr、deps/lightning等）
 
-      - name: Update Nested Submodules（修复libchdr内部zlib/zstd缺失）
+      # 步骤2：安装MIPS32小端交叉编译工具链和依赖
+      - name: Install cross-compile toolchain & dependencies
         run: |
-          git submodule update --init --recursive deps/libchdr  # 强制初始化libchdr嵌套子模块
-          # 检查zlib目录是否存在，不存在则手动拉取（兜底）
-          if [ ! -d "deps/libchdr/deps/zlib" ]; then
-              mkdir -p deps/libchdr/deps && cd deps/libchdr/deps
-              git clone https://github.com/madler/zlib.git zlib-1.3.1
-              cd -
-          fi
-          # 打印目录结构，方便调试（可选）
-          ls -la deps/libchdr/deps/
+          sudo apt update
+          # 安装MIPS32el交叉编译工具链（gcc-mipsel-linux-gnu）
+          sudo apt install -y gcc-mipsel-linux-gnu g++-mipsel-linux-gnu \
+                              make git cmake pkg-config libsdl2-dev
 
-      # 2. 安装交叉编译工具链及依赖
-      - name: Install MIPS32el Toolchain
+      # 步骤3：配置交叉编译环境，编译pcsx_rearmed
+      - name: Cross compile for MIPS32 little-endian
         run: |
-          sudo apt update && sudo apt install -y \
-            gcc-mipsel-linux-gnu \
-            g++-mipsel-linux-gnu \
-            binutils-mipsel-linux-gnu \
-            make git libtool pkg-config \
-            build-essential
+          # 定义交叉编译前缀（MIPS32小端工具链前缀）
+          export CROSS_COMPILE=mipsel-linux-gnu-
+          export CC=${CROSS_COMPILE}gcc
+          export CXX=${CROSS_COMPILE}g++
+          export AR=${CROSS_COMPILE}ar
+          export LD=${CROSS_COMPILE}ld
 
-      # 3. 配置交叉编译环境变量（移除zlib不兼容的参数）
-      - name: Set Compilation Env
-        run: |
-          echo "CROSS_COMPILE=mipsel-linux-gnu-" >> $GITHUB_ENV
-          echo "CC=mipsel-linux-gnu-gcc" >> $GITHUB_ENV
-          echo "CXX=mipsel-linux-gnu-g++" >> $GITHUB_ENV
-          echo "AR=mipsel-linux-gnu-ar" >> $GITHUB_ENV
-          echo "RANLIB=mipsel-linux-gnu-ranlib" >> $GITHUB_ENV
-          # 移除zlib编译冲突的宏（NO_JIT/DDRC_DISABLE仅针对pcsx_rearmed，不适合zlib）
-          COMMON_FLAGS="-march=mips32 -mlittle-endian -mabi=32 -msoft-float -O2 -fomit-frame-pointer -ffast-math -DMIPS=1"
-          echo "CFLAGS=$COMMON_FLAGS" >> $GITHUB_ENV
-          echo "CXXFLAGS=$COMMON_FLAGS -fno-rtti -fno-exceptions" >> $GITHUB_ENV
-          echo "ASFLAGS=-march=mips32 -mlittle-endian -mabi=32" >> $GITHUB_ENV
-          echo "LDFLAGS=-march=mips32 -mlittle-endian -mabi=32 -lm" >> $GITHUB_ENV
+          # 针对pcsx_rearmed的编译参数（适配MIPS32小端）
+          # 注意：需根据pcsx_rearmed的Makefile调整PLATFORM/ARCH等参数
+          cd pcsx_rearmed  # 若配置文件在根目录则无需cd
+          make clean
+          make \
+            PLATFORM=generic \
+            ARCH=mips32el \
+            CFLAGS="-mips32 -EL -mabi=32 -O2" \
+            LDFLAGS="-mips32 -EL" \
+            -j$(nproc)
 
-      # 4. 编译zlib（修复configure参数 + 适配交叉编译）
-      - name: Build Zlib for MIPS32el
-        run: |
-          # 进入zlib目录（兼容不同版本命名，优先找zlib/或zlib-*）
-          ZLIB_DIR=$(find deps/libchdr/deps -name "zlib*" -type d | grep -E "zlib(-[0-9.]+)?" | head -1)
-          if [ -z "$ZLIB_DIR" ]; then
-              echo "Error: Zlib directory not found!"
-              exit 1
-          fi
-          cd $ZLIB_DIR
-          
-          # zlib的configure不支持--arch，改用交叉编译正确方式
-          ./configure \
-            --prefix=/tmp/mipsel-zlib \
-            --libdir=/tmp/mipsel-zlib/lib \
-            --static  # 编译静态库（避免动态库依赖问题）
-          
-          # 强制指定交叉编译器（覆盖configure自动检测）
-          make CC="${{ env.CC }}" \
-               CFLAGS="${{ env.CFLAGS }} -I." \
-               LDFLAGS="${{ env.LDFLAGS }}" \
-               -j$(nproc)
-          make install
-          cd -
-
-      # 5. 编译zstd（简化编译，仅编译静态库）
-      - name: Build Zstd for MIPS32el
-        run: |
-          ZSTD_DIR=$(find deps/libchdr/deps -name "zstd*" -type d | grep -E "zstd(-[0-9.]+)?" | head -1)
-          if [ -z "$ZSTD_DIR" ]; then
-              echo "Error: Zstd directory not found!"
-              exit 1
-          fi
-          cd $ZSTD_DIR
-          # 交叉编译zstd静态库
-          make CC="${{ env.CC }}" \
-               CFLAGS="${{ env.CFLAGS }}" \
-               LDFLAGS="${{ env.LDFLAGS }}" \
-               PREFIX=/tmp/mipsel-zstd \
-               --prefix=/tmp/mipsel-zstd \
-               static -j$(nproc)
-          make install PREFIX=/tmp/mipsel-zstd
-          cd -
-
-      # 6. 编译PCSX-ReARMed核心（指定依赖库路径）
-      - name: Build PCSX-ReARMed Core
-        run: |
-          # 清理旧产物
-          make -f Makefile.libretro platform=unix clean
-          
-          # 指定zlib/zstd依赖路径，避免找不到头文件/库
-          export CFLAGS="${{ env.CFLAGS }} -I/tmp/mipsel-zlib/include"
-          export LDFLAGS="${{ env.LDFLAGS }} -L/tmp/mipsel-zlib/lib -L/tmp/mipsel-zstd/lib"
-          
-          # 编译核心
-          make -f Makefile.libretro platform=unix -j$(nproc)
-          
-          # 验证产物架构
-          file pcsx_rearmed_libretro.so || true
-
-      # 7. 上传编译产物
-      - name: Upload Build Artifact
+      # 步骤4：上传编译产物（核心文件）
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: pcsx_rearmed-mips32el-core
-          path: pcsx_rearmed_libretro.so
-          retention-days: 90
+          # 指定编译后的核心文件路径（需根据实际编译产物调整）
+          path: |
+            pcsx_rearmed/pcsx_rearmed.elf  # 示例产物路径，以实际为准
+            pcsx_rearmed/libretro.so        # 若编译libretro核心，补充路径
